Fix author underline, MICCAI label, and publication spacing

--- a/_sass/layout/_publications.scss
+++ b/_sass/layout/_publications.scss
@@ -44,35 +44,34 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 0.18em;
   }
 
   &__title {
-    margin: 0;
+    margin: 0 0 0.4em;
     font-size: 1rem;
     font-weight: 700;
-    line-height: 1.24;
+    line-height: 1.32;
     color: #222;
   }
 
   &__authors {
-    margin: 0;
-    font-size: 0.92rem;
-    line-height: 1.3;
+    margin: 0 0 0.32em;
+    font-size: 0.94rem;
+    line-height: 1.38;
     color: #222;
   }
 
-  &__authors u {
+  &__authors .author-self {
     text-decoration: underline;
     text-underline-offset: 2px;
     color: #222;
   }
 
   &__meta {
-    margin: 0;
-    font-size: 0.92rem;
+    margin: 0 0 0.5em;
+    font-size: 0.94rem;
     font-style: italic;
-    line-height: 1.3;
+    line-height: 1.38;
     color: #222;
 
     em {
@@ -84,8 +83,8 @@
   &__links {
     display: flex;
     flex-wrap: wrap;
-    gap: 0.35em;
-    margin-top: 0.1em;
+    gap: 0.4em;
+    margin: 0;
   }
 
   a.publication-card__btn,
